# hexum

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/development/: base.toml  base.toml.example
config/production/: base.toml.example
postgres/: queries.yaml
postgres/migrations/: users.sql
src/: app.rs  config.rs  lib.rs  main.rs  prelude.rs  telemetry.rs
src/application/: auth.rs  mod.rs
src/application/ports/: mod.rs  session.rs
src/application/ports/input/: auth.rs  mod.rs  user.rs
src/application/ports/output/: auth.rs  google.rs  mod.rs  oauth.rs  user.rs  verification.rs
src/application/services/: auth.rs  mod.rs  user.rs
src/domain/: user.rs
src/infrastructure/: mod.rs
src/infrastructure/email/: adapter.rs  lettre.rs  mod.rs  resend.rs  verification.rs
src/infrastructure/google/: adapter.rs  google.rs  mod.rs
src/infrastructure/oauth/: adapter.rs  mod.rs  oauth.rs
src/infrastructure/postgres/: adapter.rs  mod.rs  queries.rs  user.rs
src/infrastructure/postgres/dtos/: user.rs
src/infrastructure/redis/: adapter.rs  mod.rs  session.rs
src/infrastructure/security/: adapter.rs  mod.rs  paseto.rs
src/infrastructure/session/: adapter.rs  mod.rs  session.rs
src/infrastructure/verification/: adapter.rs  mod.rs  verification.rs
src/presentation/http/: docs.rs  extractors.rs  mod.rs
src/presentation/http/dtos/: auth.rs  user.rs
src/presentation/http/routes/: auth.rs  management.rs  mod.rs  user.rs
templates/: oauth_callback.html  oauth_login.html  verify_ui.html
(+4 files in other folders)
